[package]
name = "northbourne"
version = "0.1.0"
authors = [
    "Alex <northbourne@sinn.io>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10"
clap = {version = "~2.27.0", features = ["yaml"]}

[features]
default = [ "yaml" ]
yaml = []
