[package]
name = "northbourne"
version = "0.1.0"
authors = [
    "Alex <northbourne@sinn.io>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10"
clap = {version = "~2.27.0", features = ["yaml"]}
config = "0.9"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simplelog = "0.7"

[features]
default = [ "yaml" ]
yaml = []
